# TaxMeter

./: .gitignore  AGENTS.md  Package.swift
ontology/: MANIFEST.in  MCP_INSTALL.md  README.md  REMOTE_MCP.md  __init__.py  install_local.sh  mcp_server.py  package.json  pyproject.toml  run_mcp.sh  server.py
ontology/custom/: items.json
ontology/custom/finance/: card-products.generated.json
ontology/exports/: finance-ontology-manifest.json  korea-bank-products-ontology-2026.json  korea-insurance-products-ontology-2026.json  korea-tax-ontology-2026.json
ontology/schema/: node.schema.json
ontology/scripts/: __init__.py  build_finance_ontology.py  build_web.py  generate.py  generate_vault.py  import_finance_products.py  import_gov24_local_supports.py  materialize_finance_graph_vault.py  validate.py  validate_finance_ontology.py  validate_ontology.py
ontology/vault/00_Index/: OpenFin.md  OpenTax.md  대한민국 세금 온톨로지.md  보험 상품 온톨로지.md  은행 상품 온톨로지.md  카드 상품 온톨로지.md
ontology/vault/20_Deductions/: 공제·감면.md
ontology/vault/30_Supports/: 개인종합자산관리계좌 ISA.md  근로장려금.md  내집마련 디딤돌대출.md  무주택 청년 특례전세자금보증.md  부모급여.md  불법사금융예방대출.md  생계급여.md  소상공인 경영안정 바우처.md  소상공인 도약 지원사업.md  소상공인 정책자금.md  아동수당.md  자녀장려금.md  장기연체자 특별채무조정.md  정책지원금·세제지원 계좌.md  주거급여.md  첫만남이용권.md  청년도약계좌.md  청년미래적금.md  청년월세 지원사업.md  청년일자리도약장려금.md  햇살론119.md  햇살론유스.md
ontology/vault/40_Terms/: 간이과세자.md  공시가격.md  과세기간.md  과세표준.md  관세.md  국세.md  근로자.md  기준 중위소득.md  기한의 특례.md  누진공제.md  법정신고기한.md  상속인.md  세법.md  세액감면.md  세액공제.md  세율.md  소득공제 종합한도.md  소득공제.md  수증자.md  양도차익.md  원천징수.md  원천징수의무자.md  일반과세자.md  자격 기준금액.md  재산요건.md  정책금융.md  정책대출.md  지방세.md  지자체 지원금.md  채무조정.md  총급여액 등.md  총소득.md
ontology/vault/50_Deadlines/: 2025년 귀속 근로·자녀장려금 정기신청.md  2025년 귀속 종합소득세 확정신고.md  2026년 근로장려금 반기신청분 지급.md  근로·자녀장려금 신청.md  근로소득 연말정산.md  법인세 과세표준 신고.md  부가가치세 간이과세자 연간 확정신고.md  부가가치세 간이과세자 예정신고 예외.md  부가가치세 신고 납부 절차.md  부가가치세 신고 납부.md  부가가치세 일반과세자 1기 확정신고.md  부가가치세 일반과세자 2기 확정신고.md  사업자등록 신청기한.md  상속세 거주자 신고납부.md  상속세 비거주자 신고납부.md  상속세 신고.md  신고·납부·신청 기한.md  양도소득세 신고.md  양도소득세 예정신고.md  양도소득세 확정신고.md  연말정산.md  원천세 반기별 납부.md  원천세 신고 납부 절차.md  원천세 신고 납부.md  종합소득세 확정신고.md  증여세 신고.md  증여세 일반 증여 신고납부.md  지급명세서 제출.md
ontology/vault/60_Business/: 사업소득 원천징수.md  사업자 세무.md  사업자등록 신청.md
ontology/vault/70_Scenarios/: 30대 직장인 연말정산 경로.md  간이과세자 신고 여부 판단 경로.md  (+21 more)
(+18363 files in other folders)
